@startuml
'https://plantuml.com/class-diagram

abstract class Animal{
+{abstract} greeting(): String
}

class Cat{
+greeting(): String
}
Animal<|--Cat

class Dog{
+greeting(): String
+greeting(another: Dog): String
}
Dog--|> Animal

class BigDog{
+greeting(): String
+greeting(another: Dog): String
}
BigDog--|> Dog

@enduml